--- a/style.css
+++ b/style.css
@@ -50,6 +50,19 @@ body {
   color: green;
 }
 
+@keyframes flash {
+  5% {
+    border-color: crimson;
+  }
+
+  100% {
+    border-color: #ccc;
+  }
+}
+
+.invalid {
+  animation: flash 1s;
+}
 .inword {
   color: yellow;
 }
