--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ body {
   }
 }
 
+/* visibility hidden means the item is still there and taking up space
+   but just not shown. display: none doesn't take up space */
+.hidden {
+  visibility: hidden;
+}
 .info-bar {
   display: flex;
   align-items: center;
@@ -48,7 +53,7 @@ body {
 .letter-box {
   width: 55px;
   height: 55px;
-  border: 2px solid rgb(162, 161, 161);
+  border: 2px solid #ccc;
   margin: 7px;
   text-transform: uppercase;
   font-size: bold;
@@ -56,4 +61,30 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.correct {
+  background-color: green;
+  color: white;
+}
+
+.wrong {
+  background-color: #888;
+}
+
+.close {
+  background-color: goldenrod;
+}
+
+.invalid {
+  animation: flash 1s;
+}
+
+@keyframes flash {
+  5% {
+    border-color: crimson;
+  }
+  100% {
+    border-color: #ccc;
+  }
 }
